API: make mount API more RESTful
Put `mountpoint` paramater to http query string instead of http body,
change endpoint like this:

`POST` /mount?mountpoint=/mnt -> Create Mount
`PUT` /mount?mountpoint=/mnt -> Update Mount
`DELETE` /mount?mountpoint=/mnt -> Remove Mount
